Photo galleries - Fix exifdata (Remove breakall word wrap), change col size to 6 Gallery cat script - Fix (Attributes that didn't exist exited not gracefully)

--- a/assets/css/custom/includes/_gallery.scss
+++ b/assets/css/custom/includes/_gallery.scss
@@ -249,7 +249,6 @@ polyline, line {
   padding: 3px 3px 3px 3px;
   @media screen and (max-width: 992px) {
     padding: 0 0 0 0;
-    word-break: break-all;
     word-wrap: break-word;
   }
 }
